// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton should show a radio-selected icon when checked 1`] = `
<button
  aria-checked="true"
  class="radio css-12bjuvh"
  id="radio-3"
  role="radio"
>
  <span
    class="icon icon radio-selected medium"
    data-icon=""
  />
</button>
`;

exports[`RadioButton should show a radio-unselected icon when not checked 1`] = `
<button
  aria-checked="false"
  class="radio css-12bjuvh"
  id="radio-5"
  role="radio"
>
  <span
    class="icon icon radio-unselected medium"
    data-icon=""
  />
</button>
`;
